--- a/_sass/components/_toc.scss
+++ b/_sass/components/_toc.scss
@@ -9,10 +9,11 @@
     .article-title_group {
       display: block;
       margin: 1.25em 0;
-      line-height: 1.25;
+      line-height: 1.5;
     }
     .article-title {
       font-size: 1.25em;
+      margin: 0;
     }
     .article-subtitle {
       font-size: 1em;
