--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -6,45 +6,4 @@
     margin: 3em auto;
     padding: 0 25px;
   }
-  .jumbotron {
-    background-image: url('../img/cov-18.jpg');
-    height: 100vh;
-    background-size: cover;
-    padding: 0;
-    margin: 0;
-    margin-top: -$header-height;
-    .jumbo-overlay {
-      height: 100vh;
-      margin-top: -$header-height;
-      background-color: rgba(0, 0, 0, 0.15);
-    }
-    .jumbo-container {
-      display: table;
-      height: 100vh;
-    }
-    .jumbo-latest {
-      margin: auto;
-      width: 60%;
-      vertical-align: middle;
-      display: table-cell;
-    }
-    h1 {
-      margin: 0.25em 0;
-      a {
-        font-family: $serif-bold;
-        font-size: 10vh;
-        color: #FFF;
-      }
-    }
-    .meta {
-      color: #FFF;
-      font-size: 3vh;
-    }
-  }
-  .tagline {
-    background: $light-grey;
-    padding: 1.15em 0;
-    text-align: center;
-    color: $dark-grey;
-  }
 }
